--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             name="age"
             value="age"
             required
-          />&nbspunder 18 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input
+          />&nbspunder 18 &nbsp&nbsp&nbsp<input
             type="radio"
             id="age2"
             name="age"
@@ -51,7 +51,7 @@
             value="age"
             required
           />&nbsp25-40
-          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input
             type="radio"
             id="age4"
             name="age"
@@ -146,12 +146,13 @@
             id="flavour"
             name="flavour"
             value="sunburst"
-          />&nbspSunburst &nbsp&nbsp<input
+          />&nbspSunburst <br>
+          <input
             type="checkbox"
             id="flavour"
             name="flavour"
             value="iceberry"
-          />&nbspIce Berry &nbsp&nbsp<input
+          />&nbspIce Berry <br> <input
             type="checkbox"
             id="flavour"
             name="flavour"
@@ -166,17 +167,17 @@
             id="factors"
             name="factors"
             value="taste"
-          />&nbspTaste &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input
+          />&nbspTaste <br><input
             type="checkbox"
             id="factors"
             name="factors"
             value="price"
-          />&nbspPrice &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input
+          />&nbspPrice <br><input
             type="checkbox"
             id="factors"
             name="factors"
             value="healthbenefits"
-          />&nbspHealth benefits &nbsp&nbsp&nbsp&nbsp<input
+          />&nbspHealth benefits <br><input
             type="checkbox"
             id="factors"
             name="factors"
